# websocket-service

./: Base.cpp  Base.h  CMakeLists.txt  Client.cpp  Client.h  FunctionTimer.h  README.md  Service.cpp  Service.h  listener.cpp  listener.h  main.cpp  stdafx.h  websocket-service.vcxproj  websocket-service.vcxproj.filters
modules/: FindDBPOOL.cmake  FindMYSQL.cmake
